# pydantic-gbnf-grammar-generator

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: books.py  calculator.py
src/pydantic_gbnf_grammar_generator/: __init__.py  main.py
